# Lab-SAM

./: .gitignore  TRAIN.py  pyproject.toml
checkpoints/models/: sam2_hiera_small_2024-10-07_simple.torch
docs/: DEPENDENCY_SETUP.md  GETTING_DATA.md
