[build-system]
requires = [
    "setuptools>=61.0",  
    "torch>=2.3.1",
    ]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "LabSam"
version = "0.0.1"
description = "Lab Sam"
authors = ["SuperAugmentedLaboratory"]
license = "apache2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

torch = ">=2.3.1"
torchvision = ">=0.18.1"
numpy = ">=1.24.4, <2.1"
tqdm = ">=4.66.1"
hydra-core = ">=1.3.2"
iopath = "0.1.10"
pillow = ">=9.4.0"
opencv-python = ">=4.7.0"
matplotlib = ">=3.9.1"